// Vitest Snapshot v1

exports[`normalize-page > en-US getting-started 1`] = `
{
  "activeIndex": 0,
  "activeType": "docs",
  "directories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "docs",
        },
        {
          "children": [
            {
              "children": undefined,
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "docs",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "docs",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "docs",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "docs",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [
    {
      "children": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "docs",
    },
    {
      "children": [
        {
          "children": undefined,
          "locale": "en-US",
          "name": "cache",
          "route": "/docs/advanced/cache",
          "title": "Cache",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "performance",
          "route": "/docs/advanced/performance",
          "title": "Performance",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "react-native",
          "route": "/docs/advanced/react-native",
          "title": "React Native",
          "type": "docs",
        },
      ],
      "name": "advanced",
      "route": "/docs/advanced",
      "title": "Advanced",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "docs",
    },
  ],
  "flatDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "docs",
    },
  ],
  "flatDocsDirectories": [
    {
      "children": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "docs",
    },
  ],
  "flatPageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "pageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
}
`;

exports[`normalize-page > en-US home 1`] = `
{
  "activeIndex": 0,
  "activeType": "nav",
  "directories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "docs",
        },
        {
          "children": [
            {
              "children": undefined,
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "docs",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "docs",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "docs",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "docs",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "docs",
    },
  ],
  "flatDocsDirectories": [],
  "flatPageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "pageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
}
`;

exports[`normalize-page > zh-CN getting-started 1`] = `
{
  "activeIndex": 0,
  "activeType": "docs",
  "directories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "docs",
        },
        {
          "children": [
            {
              "children": undefined,
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "docs",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "docs",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "docs",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "docs",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "docs",
    },
    {
      "children": [
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "cache",
          "route": "/docs/advanced/cache",
          "title": "缓存",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "performance",
          "route": "/docs/advanced/performance",
          "title": "性能",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "react-native",
          "route": "/docs/advanced/react-native",
          "title": "React Native",
          "type": "docs",
        },
      ],
      "name": "advanced",
      "route": "/docs/advanced",
      "title": "高级",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "docs",
    },
  ],
  "flatDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "docs",
    },
  ],
  "flatDocsDirectories": [
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "docs",
    },
  ],
  "flatPageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "pageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
}
`;

exports[`normalize-page > zh-CN home 1`] = `
{
  "activeIndex": 0,
  "activeType": "nav",
  "directories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "docs",
        },
        {
          "children": [
            {
              "children": undefined,
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "docs",
            },
            {
              "children": undefined,
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "docs",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "docs",
        },
        {
          "children": undefined,
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "docs",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "docs",
        },
        {
          "children": undefined,
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "docs",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "children": undefined,
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "docs",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "docs",
    },
    {
      "children": undefined,
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "docs",
    },
    {
      "children": undefined,
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "docs",
    },
  ],
  "flatDocsDirectories": [],
  "flatPageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "pageDirectories": [
    {
      "children": undefined,
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/docs/getting-started",
      "hidden": false,
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/examples/basic",
      "hidden": false,
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [],
      "firstChildRoute": "/blog/swr-v1",
      "hidden": false,
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
}
`;
